@@ -1,0 +1,12 @@
+# Modifier Key
+
+* Default: Varies
+* Example: `modifier_key = key_lalt`
+* Since: 2.7.3dev
+* Type: Choice
+
+This option be can be used to change the default modifier key to almost any
+other key. The default value depends on the operating system:
+
+* `key_lsuper` (<kbd>Cmd</kbd>) on OS X.
+* `key_lalt` (<kbd>Alt</kbd>) on other operating systems.
