@@ -3,6 +3,7 @@
 
 #define OPTION_CURSOR "cursor"
 #define OPTION_LOG_INPUT "log_input"
+#define OPTION_MODIFIER_KEY "modifier_key"
 #define OPTION_MOUSE_INTEGRATION "mouse_integration"
 
 /* Deprecated options */
